Rename apps namespace to general

--- a/apps/general/dockerhub-read.sops.yaml
+++ b/apps/general/dockerhub-read.sops.yaml
@@ -5,7 +5,7 @@ kind: Secret
 metadata:
   creationTimestamp: null
   name: dockerhub-read
-  namespace: apps
+  namespace: general
 type: kubernetes.io/dockerconfigjson
 sops:
   age:
