--- a/apps/general/gitea-ssh-ingressroute.yaml
+++ b/apps/general/gitea-ssh-ingressroute.yaml
@@ -2,7 +2,7 @@ apiVersion: traefik.io/v1alpha1
 kind: IngressRouteTCP
 metadata:
   name: gitea-ssh
-  namespace: apps
+  namespace: general
 spec:
   entryPoints:
     - ssh
