--- a/apps/general/heimdall-ingress.yaml
+++ b/apps/general/heimdall-ingress.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: heimdall
-  namespace: apps
+  namespace: general
   annotations:
     external-dns: external
     traefik.ingress.kubernetes.io/router.entrypoints: websecure-int,websecure-ext
