--- a/apps/general/heimdall-redirects.yaml
+++ b/apps/general/heimdall-redirects.yaml
@@ -2,7 +2,7 @@ apiVersion: traefik.io/v1alpha1
 kind: Middleware
 metadata:
   name: heimdall-redirect-root
-  namespace: apps
+  namespace: general
 spec:
   redirectRegex:
     regex: ^https?://(www\.)?romanpeters\.nl/(.*)
@@ -13,11 +13,11 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: heimdall-root-alias
-  namespace: apps
+  namespace: general
   annotations:
     external-dns: external
     traefik.ingress.kubernetes.io/router.entrypoints: websecure-int,websecure-ext
-    traefik.ingress.kubernetes.io/router.middlewares: apps-heimdall-redirect-root@kubernetescrd
+    traefik.ingress.kubernetes.io/router.middlewares: general-heimdall-redirect-root@kubernetescrd
 spec:
   ingressClassName: traefik
   rules:
