--- a/apps/general/homebox-ingress.yaml
+++ b/apps/general/homebox-ingress.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: homebox
-  namespace: apps
+  namespace: general
   annotations:
     traefik.ingress.kubernetes.io/router.entrypoints: websecure-int
 spec:
