--- a/apps/general/networkpolicy.yaml
+++ b/apps/general/networkpolicy.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
   name: allow-ingress-same-namespace-and-traefik
-  namespace: apps
+  namespace: general
 spec:
   podSelector: {}
   policyTypes:
@@ -11,7 +11,7 @@ spec:
     - from:
         - namespaceSelector:
             matchLabels:
-              kubernetes.io/metadata.name: apps
+              kubernetes.io/metadata.name: general
     - from:
         - namespaceSelector:
             matchLabels:
