--- a/apps/media/prowlarr-deployment.yaml
+++ b/apps/media/prowlarr-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: prowlarr
-          image: lscr.io/linuxserver/prowlarr:latest
+          image: lscr.io/linuxserver/prowlarr:2.3.0.5236-ls137
           imagePullPolicy: IfNotPresent
           ports:
             - name: http
