--- a/apps/monitoring/prometheus-configmap.yaml
+++ b/apps/monitoring/prometheus-configmap.yaml
@@ -52,6 +52,10 @@ data:
         metrics_path: /metrics
         static_configs:
           - targets: ['trivy-operator.trivy-system.svc.cluster.local:8080']
+      - job_name: trivy-fixable-exporter
+        metrics_path: /metrics
+        static_configs:
+          - targets: ['trivy-fixable-exporter.monitoring.svc.cluster.local:9102']
   alert_rules.yml: |
     groups:
       - name: kubernetes-pods
@@ -137,18 +141,18 @@ data:
       - name: trivy-vulnerabilities
         rules:
           - alert: TrivyCriticalVulnerabilities
-            expr: trivy_image_vulnerabilities{severity="Critical",namespace!~"kube-system|cert-manager|metallb-system|flux-system|external-dns|trivy-system"} > 0
+            expr: trivy_image_fixable_vulnerabilities{severity="Critical",namespace!~"kube-system|cert-manager|metallb-system|flux-system|external-dns|trivy-system"} > 0
             for: 5m
             labels:
               severity: critical
             annotations:
-              summary: Critical image vulnerabilities detected
-              description: "{{ $labels.namespace }}/{{ $labels.resource_kind }}/{{ $labels.resource_name }} ({{ $labels.image_repository }}:{{ $labels.image_tag }}) has {{ $value }} Critical vulnerabilities."
+              summary: Fixable critical image vulnerabilities detected
+              description: "{{ $labels.namespace }}/{{ $labels.resource_kind }}/{{ $labels.resource_name }} ({{ $labels.image_repository }}:{{ $labels.image_tag }}) has {{ $value }} fixable Critical vulnerabilities."
           - alert: TrivyHighVulnerabilities
-            expr: trivy_image_vulnerabilities{severity="High",namespace!~"kube-system|cert-manager|metallb-system|flux-system|external-dns|trivy-system"} > 0
+            expr: trivy_image_fixable_vulnerabilities{severity="High",namespace!~"kube-system|cert-manager|metallb-system|flux-system|external-dns|trivy-system"} > 0
             for: 5m
             labels:
               severity: high
             annotations:
-              summary: High image vulnerabilities detected
-              description: "{{ $labels.namespace }}/{{ $labels.resource_kind }}/{{ $labels.resource_name }} ({{ $labels.image_repository }}:{{ $labels.image_tag }}) has {{ $value }} High vulnerabilities."
+              summary: Fixable high image vulnerabilities detected
+              description: "{{ $labels.namespace }}/{{ $labels.resource_kind }}/{{ $labels.resource_name }} ({{ $labels.image_repository }}:{{ $labels.image_tag }}) has {{ $value }} fixable High vulnerabilities."
