--- a/apps/infrastructure/garage-webui-deployment.yaml
+++ b/apps/infrastructure/garage-webui-deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: garage-webui
-          image: khairul169/garage-webui:latest
+          image: khairul169/garage-webui:1.1.0
           imagePullPolicy: IfNotPresent
           ports:
             - name: http
