--- a/apps/media/radarr-deployment.yaml
+++ b/apps/media/radarr-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: radarr
-          image: lscr.io/linuxserver/radarr:latest
+          image: lscr.io/linuxserver/radarr:6.0.4.10291-ls292
           imagePullPolicy: IfNotPresent
           ports:
             - name: http
