--- a/apps/media/sonarr-deployment.yaml
+++ b/apps/media/sonarr-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: sonarr
-          image: lscr.io/linuxserver/sonarr:latest
+          image: lscr.io/linuxserver/sonarr:4.0.16.2944-ls303
           imagePullPolicy: IfNotPresent
           ports:
             - name: http
