--- a/apps/media/tautulli-deployment.yaml
+++ b/apps/media/tautulli-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: tautulli
-          image: lscr.io/linuxserver/tautulli:latest
+          image: lscr.io/linuxserver/tautulli:v2.16.0-ls216
           imagePullPolicy: IfNotPresent
           ports:
             - name: http
