--- a/apps/monitoring/kustomization.yaml
+++ b/apps/monitoring/kustomization.yaml
@@ -13,6 +13,10 @@ resources:
   - alertmanager.sops.yaml
   - alertmanager-deployment.yaml
   - alertmanager-service.yaml
+  - pod-autoheal-rbac.yaml
+  - pod-autoheal-configmap.yaml
+  - pod-autoheal-telegram.sops.yaml
+  - pod-autoheal-cronjob.yaml
   - kube-state-metrics.yaml
   - trivy-fixable-exporter-rbac.yaml
   - trivy-fixable-exporter-configmap.yaml
