Reduce noise in node image prune size reporting

--- a/apps/system/node-hygiene-image-prune-cronjob.yaml
+++ b/apps/system/node-hygiene-image-prune-cronjob.yaml
@@ -33,10 +33,10 @@ spec:
                     exit 1
                   fi
 
-                  before_mb=$(du -sm "${store_path}" | awk '{print $1}')
+                  before_mb=$(du -sm "${store_path}" 2>/dev/null | awk '{print $1}')
                   before_images=$(crictl --config /dev/null --runtime-endpoint "${endpoint}" images -q | wc -l | tr -d ' ')
                   prune_output=$(crictl --config /dev/null --runtime-endpoint "${endpoint}" rmi --prune 2>&1 || true)
-                  after_mb=$(du -sm "${store_path}" | awk '{print $1}')
+                  after_mb=$(du -sm "${store_path}" 2>/dev/null | awk '{print $1}')
                   after_images=$(crictl --config /dev/null --runtime-endpoint "${endpoint}" images -q | wc -l | tr -d ' ')
                   freed_mb=$((before_mb-after_mb))
 
