Pin all app images to tag+digest and enforce with Renovate

--- a/apps/general/homebox-deployment.yaml
+++ b/apps/general/homebox-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: homebox
-          image: ghcr.io/sysadminsmedia/homebox:0.23.1
+          image: ghcr.io/sysadminsmedia/homebox:0.23.1@sha256:facd9b795952602d5c54eacfcd0f3533040e6b556f461e423a2d2445ed8736f9
           imagePullPolicy: IfNotPresent
           ports:
             - name: http
