--- a/apps/media/bazarr-deployment.yaml
+++ b/apps/media/bazarr-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: bazarr
-          image: lscr.io/linuxserver/bazarr:v1.5.5-ls337
+          image: lscr.io/linuxserver/bazarr:v1.5.5-ls337@sha256:18ff732dffcebd559d15a91845fc3360d49652ea01dccfbfd98b8248ceb86e38
           imagePullPolicy: IfNotPresent
           ports:
             - name: http
