--- a/apps/media/jellyfin-deployment.yaml
+++ b/apps/media/jellyfin-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: jellyfin
-          image: lscr.io/linuxserver/jellyfin:10.11.6ubu2404-ls20
+          image: lscr.io/linuxserver/jellyfin:10.11.6ubu2404-ls20@sha256:45814a5515fdb81cd41f5db946cfd53a3c5e91f0665b40b55bae30cab4b3cd2e
           imagePullPolicy: IfNotPresent
           ports:
             - name: http
