--- a/apps/media/tautulli-deployment.yaml
+++ b/apps/media/tautulli-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: tautulli
-          image: lscr.io/linuxserver/tautulli:v2.16.0-ls216
+          image: lscr.io/linuxserver/tautulli:v2.16.0-ls216@sha256:31bce3c8457e74392c8c451eee315a759f8b96ec7cff6060596152d7e893b776
           imagePullPolicy: IfNotPresent
           ports:
             - name: http
