--- a/apps/monitoring/kube-event-exporter.yaml
+++ b/apps/monitoring/kube-event-exporter.yaml
@@ -35,7 +35,7 @@ spec:
       serviceAccountName: kube-state-metrics
       containers:
         - name: kube-event-exporter
-          image: ghcr.io/resmoio/kubernetes-event-exporter:v1.7
+          image: ghcr.io/resmoio/kubernetes-event-exporter:v1.7@sha256:8abb52b66557d3333f9e473e0eff2951309abfd018bd8d7fcfd86c4ecce6b9cf
           imagePullPolicy: IfNotPresent
           args:
             - --conf=/config/config.yaml
