--- a/apps/monitoring/tautulli-library-exporter-deployment.yaml
+++ b/apps/monitoring/tautulli-library-exporter-deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: tautulli-library-exporter
-          image: python:3.14-alpine
+          image: python:3.14-alpine@sha256:faee120f7885a06fcc9677922331391fa690d911c020abb9e8025ff3d908e510
           imagePullPolicy: IfNotPresent
           command: ["python", "/app/exporter.py"]
           ports:
