--- a/apps/system/external-dns-deployment.yaml
+++ b/apps/system/external-dns-deployment.yaml
@@ -18,7 +18,7 @@ spec:
       serviceAccountName: external-dns
       containers:
         - name: external-dns
-          image: registry.k8s.io/external-dns/external-dns:v0.20.0
+          image: registry.k8s.io/external-dns/external-dns:v0.20.0@sha256:ddc7f4212ed09a21024deb1f470a05240837712e74e4b9f6d1f2632ff10672e7
           imagePullPolicy: IfNotPresent
           args:
             - --source=ingress
