--- a/apps/system/node-hygiene-image-prune-cronjob.yaml
+++ b/apps/system/node-hygiene-image-prune-cronjob.yaml
@@ -16,7 +16,7 @@ spec:
           restartPolicy: OnFailure
           containers:
             - name: image-prune
-              image: rancher/k3s:v1.33.5-k3s1
+              image: rancher/k3s:v1.33.5-k3s1@sha256:fd4740667b7033055c27d424d0d2d660bf66cedbdb225d68e0eab6dd48aa0fd2
               imagePullPolicy: IfNotPresent
               securityContext:
                 privileged: true
