--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -18,11 +18,10 @@
   },
   "packageRules": [
     {
-      "description": "If latest is used, pin digest so the image becomes immutable until replaced with a version tag",
+      "description": "Always keep Docker image references pinned to digests (repo:tag@sha256:...)",
       "matchDatasources": ["docker"],
-      "matchCurrentValue": "/^latest$/",
       "pinDigests": true,
-      "groupName": "pin floating latest docker tags"
+      "groupName": "pin docker image digests"
     },
     {
       "description": "Always hold major updates for manual review",
