--- a/apps/general/gitea-deployment.yaml
+++ b/apps/general/gitea-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: gitea
-          image: gitea/gitea:1.25.4
+          image: gitea/gitea:1.25.4@sha256:17d18218be2dad1f8ed402a4f906989505c90ab8b66ee9befcecfb5d470133e7
           imagePullPolicy: IfNotPresent
           ports:
             - name: http
