--- a/apps/general/gitea-postgres.yaml
+++ b/apps/general/gitea-postgres.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: postgres
-          image: pgvector/pgvector:0.8.1-pg16-trixie
+          image: pgvector/pgvector:0.8.1-pg16-trixie@sha256:1e4956185a7fd9306a41ee759a7b4329c4faf9a2bb91a1d01437310c97002433
           imagePullPolicy: IfNotPresent
           ports:
             - name: postgres
