--- a/apps/general/heimdall-deployment.yaml
+++ b/apps/general/heimdall-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: heimdall
-          image: lscr.io/linuxserver/heimdall:v2.7.6-ls337
+          image: lscr.io/linuxserver/heimdall:v2.7.6-ls337@sha256:adb467b90b825f44d7e4c1764191f4fa0a7c38cff6ff050407f7aeb3514bdbe1
           imagePullPolicy: IfNotPresent
           ports:
             - name: http
