--- a/apps/general/n8n-deployment.yaml
+++ b/apps/general/n8n-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: n8n
-          image: n8nio/n8n:2.8.3
+          image: n8nio/n8n:2.8.3@sha256:53004142b0e93de1e9e31943e601ed9bd4b24ca82a307864ccadf1820b627e5e
           imagePullPolicy: IfNotPresent
           ports:
             - name: http
