--- a/apps/infrastructure/garage-webui-deployment.yaml
+++ b/apps/infrastructure/garage-webui-deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: garage-webui
-          image: khairul169/garage-webui:1.1.0
+          image: khairul169/garage-webui:1.1.0@sha256:17c793551873155065bf9a022dabcde874de808a1f26e648d4b82e168806439c
           imagePullPolicy: IfNotPresent
           ports:
             - name: http
