--- a/apps/media/calibre-web-deployment.yaml
+++ b/apps/media/calibre-web-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       initContainers:
         - name: patch-templates
-          image: crocodilestick/calibre-web-automated:v4.0.6
+          image: crocodilestick/calibre-web-automated:v4.0.6@sha256:c31a738b6d5ec6982c050063dd3f063b6943eb1051fc81144789f840d9093a8d
           imagePullPolicy: IfNotPresent
           command:
             - /bin/sh
@@ -36,7 +36,7 @@ spec:
               mountPath: /work
       containers:
         - name: calibre-web-automated
-          image: crocodilestick/calibre-web-automated:v4.0.6
+          image: crocodilestick/calibre-web-automated:v4.0.6@sha256:c31a738b6d5ec6982c050063dd3f063b6943eb1051fc81144789f840d9093a8d
           imagePullPolicy: IfNotPresent
           ports:
             - name: http
