--- a/apps/media/immich-machine-learning.yaml
+++ b/apps/media/immich-machine-learning.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: immich-machine-learning
-          image: ghcr.io/immich-app/immich-machine-learning:v2.5.6
+          image: ghcr.io/immich-app/immich-machine-learning:v2.5.6@sha256:b213fa3c82d27a21a299c46ffbb38a091f18384db1ad67d409a3b34fe0fce556
           imagePullPolicy: IfNotPresent
           ports:
             - name: http
