--- a/apps/media/immich-redis.yaml
+++ b/apps/media/immich-redis.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: redis
-          image: redis:8.0.5-alpine3.21
+          image: redis:8.0.5-alpine3.21@sha256:6c8e66693fa71bad36ae06c75c990446ad01dbd4b081dd847eb9869f20d7c6ee
           imagePullPolicy: IfNotPresent
           ports:
             - name: redis
