--- a/apps/media/prowlarr-deployment.yaml
+++ b/apps/media/prowlarr-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: prowlarr
-          image: lscr.io/linuxserver/prowlarr:2.3.0.5236-ls137
+          image: lscr.io/linuxserver/prowlarr:2.3.0.5236-ls137@sha256:e74a1e093dcc223d671d4b7061e2b4946f1989a4d3059654ff4e623b731c9134
           imagePullPolicy: IfNotPresent
           ports:
             - name: http
