--- a/apps/media/radarr-deployment.yaml
+++ b/apps/media/radarr-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: radarr
-          image: lscr.io/linuxserver/radarr:6.0.4.10291-ls292
+          image: lscr.io/linuxserver/radarr:6.0.4.10291-ls292@sha256:f08dda38e7d12e5a722d9a5cb6e54acaf63c8598fefeefec88effe0c0d0038dd
           imagePullPolicy: IfNotPresent
           ports:
             - name: http
