--- a/apps/media/sonarr-deployment.yaml
+++ b/apps/media/sonarr-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: sonarr
-          image: lscr.io/linuxserver/sonarr:4.0.16.2944-ls303
+          image: lscr.io/linuxserver/sonarr:4.0.16.2944-ls303@sha256:37be832b78548e3f55f69c45b50e3b14d18df1b6def2a4994258217e67efb1a1
           imagePullPolicy: IfNotPresent
           ports:
             - name: http
