--- a/apps/monitoring/alertmanager-deployment.yaml
+++ b/apps/monitoring/alertmanager-deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: alertmanager
-          image: prom/alertmanager:v0.31.1
+          image: prom/alertmanager:v0.31.1@sha256:88b605de9aba0410775c1eb3438f951115054e0d307f23f274a4c705f51630c1
           imagePullPolicy: IfNotPresent
           args:
             - "--config.file=/etc/alertmanager/alertmanager.yml"
