--- a/apps/monitoring/blackbox-exporter-deployment.yaml
+++ b/apps/monitoring/blackbox-exporter-deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: blackbox-exporter
-          image: prom/blackbox-exporter:v0.28.0
+          image: prom/blackbox-exporter:v0.28.0@sha256:e753ff9f3fc458d02cca5eddab5a77e1c175eee484a8925ac7d524f04366c2fc
           imagePullPolicy: IfNotPresent
           args:
             - "--config.file=/etc/blackbox/blackbox.yml"
