--- a/apps/monitoring/changedetection-deployment.yaml
+++ b/apps/monitoring/changedetection-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: changedetection
-          image: dgtlmoon/changedetection.io:0.52.9
+          image: dgtlmoon/changedetection.io:0.52.9@sha256:e95931043d68da46e90498ce74ad317b392caade07186dc06bdfa1710901bf90
           imagePullPolicy: IfNotPresent
           ports:
             - name: http
