--- a/apps/monitoring/grafana-deployment.yaml
+++ b/apps/monitoring/grafana-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: grafana
-          image: grafana/grafana:12.3.3
+          image: grafana/grafana:12.3.3@sha256:9e1e77ade304069aee3196e9a4f210830e96e80ce9a2640891eccc324b152faf
           imagePullPolicy: IfNotPresent
           ports:
             - name: http
