--- a/apps/monitoring/karma-deployment.yaml
+++ b/apps/monitoring/karma-deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: karma
-          image: ghcr.io/prymitive/karma:v0.122
+          image: ghcr.io/prymitive/karma:v0.122@sha256:87312daa8b8ca740e2acd427fc996724f8c69e36b9f0ad15c1961c1e4ccb1987
           args:
             - "--alertmanager.uri=http://alertmanager.monitoring.svc.cluster.local:9093"
             - "--listen.address=0.0.0.0"
