--- a/apps/monitoring/kube-state-metrics.yaml
+++ b/apps/monitoring/kube-state-metrics.yaml
@@ -132,7 +132,7 @@ spec:
       serviceAccountName: kube-state-metrics
       containers:
         - name: kube-state-metrics
-          image: registry.k8s.io/kube-state-metrics/kube-state-metrics:v2.18.0
+          image: registry.k8s.io/kube-state-metrics/kube-state-metrics:v2.18.0@sha256:1545919b72e3ae035454fc054131e8d0f14b42ef6fc5b2ad5c751cafa6b2130e
           imagePullPolicy: IfNotPresent
           ports:
             - name: http
