--- a/apps/monitoring/ntfy-deployment.yaml
+++ b/apps/monitoring/ntfy-deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: ntfy
-          image: binwiederhier/ntfy:v2.17.0
+          image: binwiederhier/ntfy:v2.17.0@sha256:4768ca4ed07bf5ba0331f333bfccc541ba1594ed7fa5a7b0245763a581809344
           imagePullPolicy: IfNotPresent
           args:
             - serve
