--- a/apps/monitoring/playwright-chrome-deployment.yaml
+++ b/apps/monitoring/playwright-chrome-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: playwright-chrome
-          image: browserless/chrome
+          image: browserless/chrome:1.61.1-chrome-stable@sha256:efac47cfff3830d9a50b27d29f8bbb61949058ae336c823fbe9bd3c0d1debcc8
           imagePullPolicy: IfNotPresent
           ports:
             - name: http
