--- a/apps/monitoring/pod-autoheal-cronjob.yaml
+++ b/apps/monitoring/pod-autoheal-cronjob.yaml
@@ -16,7 +16,7 @@ spec:
           restartPolicy: OnFailure
           containers:
             - name: autoheal
-              image: python:3.12.12-alpine3.22
+              image: python:3.12.12-alpine3.22@sha256:848ba4413eb897e225159b8fc1b02094576cbae4aa73fc13142608ae2c8c0e32
               imagePullPolicy: IfNotPresent
               command:
                 - python
