--- a/apps/monitoring/uptime-kuma-deployment.yaml
+++ b/apps/monitoring/uptime-kuma-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: uptime-kuma
-          image: louislam/uptime-kuma:2.1.1
+          image: louislam/uptime-kuma:2.1.1@sha256:e4045dc9b2b96a5503be7372e3b648104ba7153e452974c2247c66178389ac39
           imagePullPolicy: IfNotPresent
           ports:
             - name: http
