--- a/apps/media/audiobookshelf-ingress.yaml
+++ b/apps/media/audiobookshelf-ingress.yaml
@@ -4,7 +4,7 @@ metadata:
   name: audiobookshelf
   annotations:
     external-dns: external
-    traefik.ingress.kubernetes.io/router.entrypoints: websecure-int,websecure-ext
+    traefik.ingress.kubernetes.io/router.entrypoints: websecure-int,websecure-pub
 spec:
   ingressClassName: traefik
   rules:
