--- a/apps/infrastructure/authentik-outpost-homepage-ingress.yaml
+++ b/apps/infrastructure/authentik-outpost-homepage-ingress.yaml
@@ -4,7 +4,7 @@ metadata:
   name: authentik-outpost-homepage
   namespace: infrastructure
   annotations:
-    traefik.ingress.kubernetes.io/router.entrypoints: websecure-int,websecure-ext
+    traefik.ingress.kubernetes.io/router.entrypoints: websecure-int,websecure-pub
 spec:
   ingressClassName: traefik
   tls:
