--- a/apps/infrastructure/homepage-tv-config.yaml
+++ b/apps/infrastructure/homepage-tv-config.yaml
@@ -8,7 +8,7 @@ data:
     title: RomanTV
     theme: light
     color: slate
-    background: https://images.romanpeters.nl/rtvbg.jpeg
+    background: http://cdn.romanpeters.nl/images/
     headerStyle: boxed
     statusStyle: dot
     layout:
