--- a/apps/media/kustomization.yaml
+++ b/apps/media/kustomization.yaml
@@ -8,6 +8,9 @@ resources:
   - nfs-pv.yaml
   - nfs-pvc.yaml
   - config-pvcs.yaml
+  - configarr-configmap.yaml
+  - configarr-secrets.sops.yaml
+  - configarr-cronjob.yaml
   - sonarr-deployment.yaml
   - sonarr-service.yaml
   - sonarr-ingress.yaml
