Add FlareSolverr service for Prowlarr

--- a/apps/media/kustomization.yaml
+++ b/apps/media/kustomization.yaml
@@ -26,6 +26,8 @@ resources:
   - prowlarr-deployment.yaml
   - prowlarr-service.yaml
   - prowlarr-ingress.yaml
+  - flaresolverr-deployment.yaml
+  - flaresolverr-service.yaml
   - gluetun-openvpn.sops.yaml
   - transmission-deployment.yaml
   - transmission-service.yaml
