Fix PodNotReady alert to ignore completed Job pods

--- a/apps/monitoring/prometheus-configmap.yaml
+++ b/apps/monitoring/prometheus-configmap.yaml
@@ -91,7 +91,10 @@ data:
               summary: Pod restarting
               description: Pod {{ $labels.namespace }}/{{ $labels.pod }} restarted in the last 10 minutes.
           - alert: PodNotReady
-            expr: kube_pod_status_ready{condition="true"} == 0
+            expr: |
+              (kube_pod_status_ready{condition="true"} == 0)
+                and on(namespace,pod) (kube_pod_status_phase{phase=~"Pending|Running"} == 1)
+                unless on(namespace,pod) (kube_pod_owner{owner_kind="Job"} == 1)
             for: 10m
             labels:
               severity: warning
