--- a/apps/media/configarr-configmap.yaml
+++ b/apps/media/configarr-configmap.yaml
@@ -20,6 +20,95 @@ data:
         api_key: !secret SONARR_API_KEY
         quality_definition:
           type: series
+          qualities:
+            - quality: "Bluray-1080p"
+              min: 50.4
+              preferred: 55.4
+              max: 80
+            - quality: "Bluray-1080p Remux"
+              min: 69.1
+              preferred: 90
+              max: 130
+            - quality: "Bluray-2160p"
+              min: 94.6
+              preferred: 99.6
+              max: 120
+            - quality: "Bluray-2160p Remux"
+              min: 187.4
+              preferred: 192.4
+              max: 202.4
+            - quality: "Bluray-480p"
+              min: 2
+              preferred: 8
+              max: 18
+            - quality: "Bluray-576p"
+              min: 2
+              preferred: 8
+              max: 18
+            - quality: "Bluray-720p"
+              min: 17.1
+              preferred: 30
+              max: 50
+            - quality: "DVD"
+              min: 0
+              preferred: 8
+              max: 18
+            - quality: "HDTV-1080p"
+              min: 15
+              preferred: 50
+              max: 80
+            - quality: "HDTV-2160p"
+              min: 25
+              preferred: 80
+              max: 120
+            - quality: "HDTV-720p"
+              min: 10
+              preferred: 30
+              max: 50
+            - quality: "Raw-HD"
+              min: 0
+              preferred: 20
+              max: 35
+            - quality: "SDTV"
+              min: 0
+              preferred: 8
+              max: 18
+            - quality: "Unknown"
+              min: 0
+              preferred: 8
+              max: 18
+            - quality: "WEBDL-1080p"
+              min: 15
+              preferred: 50
+              max: 80
+            - quality: "WEBDL-2160p"
+              min: 25
+              preferred: 80
+              max: 120
+            - quality: "WEBDL-480p"
+              min: 0
+              preferred: 8
+              max: 18
+            - quality: "WEBDL-720p"
+              min: 10
+              preferred: 30
+              max: 50
+            - quality: "WEBRip-1080p"
+              min: 15
+              preferred: 50
+              max: 80
+            - quality: "WEBRip-2160p"
+              min: 25
+              preferred: 80
+              max: 120
+            - quality: "WEBRip-480p"
+              min: 2
+              preferred: 8
+              max: 18
+            - quality: "WEBRip-720p"
+              min: 10
+              preferred: 30
+              max: 50
         include:
           - template: sonarr-quality-definition-series
           - template: sonarr-v4-quality-profile-web-1080p
@@ -32,6 +121,127 @@ data:
         api_key: !secret RADARR_API_KEY
         quality_definition:
           type: movie
+          qualities:
+            - quality: "Bluray-1080p"
+              min: 50.8
+              preferred: 55.8
+              max: 80
+            - quality: "Bluray-2160p"
+              min: 102
+              preferred: 107
+              max: 120
+            - quality: "Bluray-480p"
+              min: 0
+              preferred: 8
+              max: 18
+            - quality: "Bluray-576p"
+              min: 0
+              preferred: 8
+              max: 18
+            - quality: "Bluray-720p"
+              min: 25.7
+              preferred: 30.7
+              max: 50
+            - quality: "BR-DISK"
+              min: 0
+              preferred: 20
+              max: 35
+            - quality: "CAM"
+              min: 0
+              preferred: 8
+              max: 18
+            - quality: "DVD"
+              min: 0
+              preferred: 8
+              max: 18
+            - quality: "DVD-R"
+              min: 0
+              preferred: 8
+              max: 18
+            - quality: "DVDSCR"
+              min: 0
+              preferred: 8
+              max: 18
+            - quality: "HDTV-1080p"
+              min: 33.8
+              preferred: 50
+              max: 80
+            - quality: "HDTV-2160p"
+              min: 85
+              preferred: 90
+              max: 120
+            - quality: "HDTV-720p"
+              min: 17.1
+              preferred: 30
+              max: 50
+            - quality: "Raw-HD"
+              min: 0
+              preferred: 20
+              max: 35
+            - quality: "REGIONAL"
+              min: 0
+              preferred: 8
+              max: 18
+            - quality: "Remux-1080p"
+              min: 102
+              preferred: 107
+              max: 130
+            - quality: "Remux-2160p"
+              min: 187.4
+              preferred: 192.4
+              max: 202.4
+            - quality: "SDTV"
+              min: 0
+              preferred: 8
+              max: 18
+            - quality: "TELECINE"
+              min: 0
+              preferred: 8
+              max: 18
+            - quality: "TELESYNC"
+              min: 0
+              preferred: 8
+              max: 18
+            - quality: "Unknown"
+              min: 0
+              preferred: 8
+              max: 18
+            - quality: "WEBDL-1080p"
+              min: 12.5
+              preferred: 50
+              max: 80
+            - quality: "WEBDL-2160p"
+              min: 34.5
+              preferred: 80
+              max: 120
+            - quality: "WEBDL-480p"
+              min: 0
+              preferred: 8
+              max: 18
+            - quality: "WEBDL-720p"
+              min: 12.5
+              preferred: 30
+              max: 50
+            - quality: "WEBRip-1080p"
+              min: 12.5
+              preferred: 50
+              max: 80
+            - quality: "WEBRip-2160p"
+              min: 34.5
+              preferred: 80
+              max: 120
+            - quality: "WEBRip-480p"
+              min: 0
+              preferred: 8
+              max: 18
+            - quality: "WEBRip-720p"
+              min: 12.5
+              preferred: 30
+              max: 50
+            - quality: "WORKPRINT"
+              min: 0
+              preferred: 8
+              max: 18
         include:
           - template: radarr-quality-definition-movie
           - template: radarr-quality-profile-remux-web-1080p
